# consumer_behavior_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
consumer_behavior_project/: __main__.py  evaluation.py  model.py  preprocessing.py  utils.py
consumer_behavior_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: exploration.ipynb  modeling_steps.ipynb  preprocessing_steps.ipynb
