[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consumer_behavior_project"
version = "0.1.0"
description = "Multiclass classification project for consumer behavior"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "imbalanced-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
]

[tool.setuptools]
packages = ["consumer_behavior_project"]