[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consumer_behavior_project"
version = "0.1.0"
description = "Multiclass classification project for consumer behavior"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "seaborn",
    "PyQt5 ; sys_platform == 'darwin'",
    "PyQt5 ; sys_platform == 'linux'",
    "PySide6 ; sys_platform == 'win32'",
]

[tool.setuptools]
packages = ["consumer_behavior_project"]